<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:layout_gravity="center"
    tools:context=".Auth.ForgotPassword">



    <ScrollView
        style="@style/parent">

        <RelativeLayout
            style="@style/parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:weightSum="12">

                <LinearLayout
                    style="@style/parent"
                    android:background="@drawable/login_shape_bk"
                    android:orientation="vertical"
                    android:layout_weight="2">

                    <ImageView
                        style="@style/parent"
                        android:background="@drawable/ic_login_bk"
                        android:contentDescription="login background" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">


                <ImageView
                    style="@style/headerText"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:src="@drawable/atta" />


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="60dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_horizontal_margin">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:padding="10dp"
                        android:text="@string/lbl_forgot_password"
                        android:textColor="@color/background"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/activity_horizontal_margin"
                        android:text="@string/forgot_password_msg"
                        android:textColor="@color/background"
                        android:textSize="12dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/border"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress"
                            android:textColor="@android:color/background_dark"
                            android:textColorHint="@android:color/background_dark" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Login Button -->

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_reset_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dip"
                        android:background="@color/background"
                        android:text="@string/btn_reset_password"
                        android:textColor="@color/primary" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@null"
                        android:text="@string/btn_back"
                        android:textColor="@color/primary" />

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center|bottom"
                    android:layout_marginBottom="20dp"
                    android:visibility="gone" />


            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>