<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin">


    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

    <TextView
        style="@style/headerTextPrimary"
        android:text="Login"
        android:fontFamily="@fonts/comfortaa_bold"
        android:layout_marginTop="@dimen/loginViewsMargin"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">
            <EditText
                android:id="@+id/mechemail"
                android:background="@drawable/border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/login_email_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/mechpassword"
                android:background="@drawable/border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/check1"
            android:layout_marginTop="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Remember Me?"/>
        <TextView
            style="@style/viewParent"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:minHeight="48dp"
            android:id="@+id/btn_reset_password"
            android:fontFamily="@fonts/nunito_sans_light"
            android:text="Forgot Password?"
            android:textColor="@color/background"
            android:textSize="@dimen/newsMoreTextSize"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@fonts/comfortaa_bold"
            android:text="Login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@color/background" />

        <TextView
            style="@style/parent"
            android:textAlignment="center"
            android:fontFamily="@fonts/nunito_sans_light"
            android:textColor="@color/primary"
            android:text="@string/login_signup_hint"
            android:id="@+id/btn_signup"
            android:layout_marginTop="@dimen/loginViewsMargin"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>